# codex-proxy

./: .env.example  .gitignore  PLAN.md  README.md  output_schema.json  pyproject.toml  requirements.txt  test_tools_manual.py
app/: __init__.py  auth.py  cli.py  config.py  main.py
app/models/: __init__.py  codex.py  openai.py
app/routers/: chat.py  models.py
app/services/: __init__.py  base_executor.py  codex_executor.py  opencode_executor.py  response_mapper.py
tests/: __init__.py  test_tools.py
